# screenjournal-open

./: .gitignore  BUILD_AND_RUN.md  BUNDLED_APP.md  DATABASE_BUNDLING.md  DISTRIBUTION.md  EMBEDDED_MODE.md  INTEGRATION_SUMMARY.md  LAUNCH.md  LOG_ANALYSIS.md  README.md  RELEASE_SETUP.md  WINDOWS_INSTALLER.md  build-bundled-linux.sh  build-bundled-windows.sh  build-bundled.sh  build.sh  docker-compose.yml  run-built.sh  start-copy.sh  start-new.sh  start.sh  stop.sh
.github/workflows/: release-desktop.yaml
bot/: Influx api query flux manual.json  InfluxDB agent flux dev.json
matt-collector/: .dockerignore  .env.example  .gitignore  CLAUDE.md  LOCAL_SETUP.md  README.md  docker-compose.yml  go.mod  go.sum
matt-collector/cmd/server/: main.go
matt-collector/internal/config/: config.go
matt-collector/test-data/: README.md
matt-tracker-chat-agent/: SETUP.md  backend_client.py  main.py  pyrightconfig.json  requirements.txt  server.py
matt-tracker-frontend/: README.md  package-lock.json  package.json
matt-tracker-frontend/app/: globals.css  layout.tsx  page.tsx
matt-tracker-frontend/components/: Chat.tsx  GraphDisplay.tsx  NavBar.tsx  ReportForm.tsx  ReportLoading.tsx  UserMenu.tsx  WeeklyReportForm.tsx  WeeklyReportLoading.tsx
matt-tracker-frontend/lib/: authAPI.ts  organisationsAPI.ts  usersAPI.ts  weeklyReportsAPI.ts
matt-tracker-report/: .gitignore  CHAT_AGENT_IMPLEMENTATION.md  JWT_TOKEN_STRUCTURE.md  README.md  RESEARCH_NOTES.md  TECHNICAL_SPECIFICATION.md  go.mod
matt-tracker-report/prompts/: system_prompt.txt
matt-tracker-report/schemas/: report_schema.json
mattpm/: README.md  package-lock.json  package.json
screenjournal/: README.md  package-lock.json  package.json
screenjournal/apps/desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
screenjournal/apps/desktop/src-tauri/resources/: start-bundled.bat  start-bundled.sh
screenjournal/apps/desktop/src-tauri/resources/frontend/sj-tracker-frontend/: STYLING_GUIDE.md  next.config.js  package-lock.json
screenjournal/apps/desktop/src-tauri/resources/frontend/sj-tracker-frontend/app/: layout.tsx  page.tsx
screenjournal/apps/desktop/src-tauri/resources/frontend/sj-tracker-frontend/app/api/chat/: route.ts
screenjournal/apps/desktop/src-tauri/resources/frontend/sj-tracker-frontend/app/api/reports/generate-weekly/: route.ts
screenjournal/apps/desktop/src-tauri/resources/frontend/sj-tracker-frontend/app/api/reports/weekly/opt-in/: route.ts
screenjournal/apps/desktop/src-tauri/resources/frontend/sj-tracker-frontend/app/api/reports/weekly/opt-out/: route.ts
screenjournal/apps/desktop/src-tauri/resources/frontend/sj-tracker-frontend/app/login/: page.tsx
screenjournal/apps/desktop/src-tauri/resources/frontend/sj-tracker-frontend/app/reports/weekly/: page.tsx
screenjournal/apps/desktop/src-tauri/resources/frontend/sj-tracker-frontend/components/: NavBar.tsx  ReportDisplay.tsx  ReportForm.tsx  UserMenu.tsx  WeeklyReportForm.tsx
screenjournal/apps/desktop/src-tauri/resources/frontend/sj-tracker-frontend/lib/: graphParser.ts  weeklyReportFormatter.ts
screenjournal/apps/desktop/src-tauri/src/: lib.rs
screenjournal/apps/desktop/src-tauri/src/activitywatch/: client.rs  manager.rs
screenjournal/apps/desktop/src-tauri/src/collector/: manager.rs  mod.rs
screenjournal/apps/desktop/src-tauri/src/recording/: manager.rs  storage.rs  types.rs
screenjournal/apps/desktop/src-tauri/src/recording/gemini/: types.rs
screenjournal/apps/desktop/src-tauri/src/services/: manager.rs  mod.rs
scripts/: prepare-databases.sh
sj-collector/: .env.example  .gitignore  CLAUDE.md  Dockerfile  LOCAL_SETUP.md  README.md  docker-compose.yml  go.mod
sj-collector/test-data/: README.md  generate_data.py
sj-tracker-chat-agent/: README.md  SETUP.md  main.py  server.py
sj-tracker-frontend/: README.md  n8n-graph-prompt.md  package.json
sj-tracker-frontend/components/: NavBar.tsx  ReportLoading.tsx  UserMenu.tsx  WeeklyReportDisplay.tsx  WeeklyReportForm.tsx  WeeklyReportsEmailSettings.tsx
sj-tracker-frontend/lib/: authAPI.ts  pdfGenerator.ts  reportFormatter.ts  session.ts  weeklyPdfGenerator.ts
sj-tracker-report/: .env.example  CHAT_AGENT_IMPLEMENTATION.md  JWT_TOKEN_STRUCTURE.md  README.md  RESEARCH_NOTES.md  TECHNICAL_SPECIFICATION.md  go.mod  go.sum
sj-tracker-report/prompts/: weekly_system_prompt.txt
(+147 files in other folders)
